2009-03-10  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fsize_equal): Allow single argument call.

2009-03-09  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* ls-ascii-helper.h, ls-ascii-helper.cc: New files.
	* Makefile.in: Add them to the appropriate lists.
	* load-save.cc (Fload): Open all files in binary mode.
	* ov-range.cc (load_ascii): Explicitly handle CR and CRLF line endings.
	* ov-fcn-handle.cc (load_ascii): Likewise.
	* ov-fcn-inline.cc (load_ascii): Likewise.
	* ov-str-mat.cc (load_ascii): Likewise.
	* ls-mat-ascii.cc (get_mat_data_input_line): Likewise.
	* ls-oct-ascii.cc (extract_keyword, read_ascii_data): Likewise.
	* ls-oct-ascii.h (extract_keyword): Likewise.
	
2009-03-09  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (OCTAVE_DEFAULT_FONTNAME): New macro, defaults to "*".
	(axes::properties, text::properties): Use it to set default fontname.
	* graphics.cc (axes::properties::set_defaults): Likewise.

2009-03-09  Rafael Laboissiere  <rafael@debian.org>

	* Makefile.in (maintainer-clean): Remove y.tab.h here.
	(distclean): Not here.

2009-03-09  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (F__accumarray_sum__): New function.
	(do_accumarray_sum): New helper template function.

2009-03-07  Jaroslav Hajek  <highegg@gmail.com>

	* xdiv.cc (mdm_div_impl, dmm_lelftdiv_impl, dmdm_div_impl,
	dmdm_leftdiv_impl): Optimize.

2009-03-07  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (octave_print_internal (std::ostream&,
	const PermMatrix&, bool, int)): Delete unused variable SCALE.

	* utils.cc (octave_vsnprintf): Avoid uninitialized variable
	warning from GCC.

	* DLD-FUNCTIONS/qz.cc (Fqz): Avoid "maybe clobbered by vfork"
	warning from GCC.

	* version.h (OCTAVE_VERSION): Now 3.1.54.
	(OCTAVE_API_VERSION): Now api-v36.
	(OCTAVE_RELEASE_DATE): Now 2009-03-07.

	* octave.cc (verbose_usage): Include --doc-cache-file in option list.

2009-03-06  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::diag_matrix_value,