@@ -1,6 +1,7 @@
 2009-03-10  Jaroslav Hajek  <highegg@gmail.com>
 
 	* data.cc (Fsize_equal): Allow single argument call.
+	* DLD-FUNCTIONS/max.cc (Fcummin, Fcummax): Update docs.
 
 2009-03-09  Benjamin Lindner  <lindnerb@users.sourceforge.net>
 
